# fetch

./: README.md  pyproject.toml
src/: data.json  fetch.py  install.py  uninstall.py
